--- a/manifest.json
+++ b/manifest.json
@@ -16,11 +16,15 @@
     },
     {
       "id": "display_full_path",
-      "type": "bool",
-      "default_value": "false",
-      "name": "Display full path",
-      "description": "Show full file path in the search results. If unchecked, only the file name will be displayed."
-    },    
+      "type": "options",
+      "options": [
+        {"value": "0", "label": "Show basename"},
+        {"value": "1", "label": "Show full path"}
+      ],
+      "default_value": "0",
+      "name": "Display file path",
+      "description": "Choose whether to show the full file path or just the file name in the search results."
+    },     
     {
       "id": "search_type",
       "type": "select",
